TRYING TO FIX SCROLLBAR

--- a/css/profile-page.css
+++ b/css/profile-page.css
@@ -281,7 +281,8 @@ th, td {
 
 
 .input-group{
-    max-width: 85vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
     
     
 }
